samples/_failures_safe/1761707827_89e057_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_541ef88f.c: In function ‘main’:
./samples/SAFE/__tmp_541ef88f.c:160:5: error: expected expression at end of input
  160 |     if (decompressed.data ==
      |     ^~
./samples/SAFE/__tmp_541ef88f.c:160:5: error: expected declaration or statement at end of input
